# lib3dtiles

./: LICENSE
3dtiles/: 3dtiles.cpp  3dtiles.hpp  CMakeLists.txt  b3dm.cpp  b3dm.hpp  encoder.cpp  encoder.hpp  io.hpp  mesh.cpp  mesh.hpp  reader.cpp  reader.hpp  support.cpp  support.hpp
3dtiles/extensions/mlwn/: srs.cpp  srs.hpp
3dtiles/tools/: 3dtiles-metadata.cpp  3dtiles2obj.cpp  CMakeLists.txt  b3dm2obj.cpp  clone-3dtiles.cpp
